@startuml Diagramme de Classes - Mini Amazon

!theme plain
skinparam classAttributeIconSize 0
skinparam backgroundColor #FFFFFF
skinparam classBorderColor #000000
skinparam classBackgroundColor #F0F0F0

class Utilisateur {
  +int id
  +string nom
  +string email
  +string mot_de_passe
  +string role
  +datetime date_creation
  --
  +inscrire()
  +connecter()
  +deconnecter()
}

class Produit {
  +int id
  +string nom
  +text description
  +decimal prix
  +string image
  +int categorie_id
  +int stock
  +boolean actif
  +datetime date_creation
  --
  +obtenirMoyenneNotes()
  +verifierStock()
  +diminuerStock()
}

class Categorie {
  +int id
  +string nom
  +text description
  +string slug
  --
  +obtenirProduits()
}

class Panier {
  +int id
  +int utilisateur_id
  +datetime date_creation
  --
  +ajouterArticle()
  +retirerArticle()
  +modifierQuantite()
  +obtenirTotal()
  +vider()
}

class ArticlePanier {
  +int id
  +int panier_id
  +int produit_id
  +int quantite
  +decimal prix
  --
  +obtenirSousTotal()
}

class Commande {
  +int id
  +string numero_commande
  +int utilisateur_id
  +decimal sous_total
  +decimal prix_livraison
  +decimal reduction
  +decimal total
  +string statut
  +int mode_livraison_id
  +text adresse_livraison
  +int point_relais_id
  +string numero_suivi
  +datetime date_creation
  --
  +modifierStatut()
  +calculerTotal()
  +envoyerConfirmation()
}

class ArticleCommande {
  +int id
  +int commande_id
  +int produit_id
  +int quantite
  +decimal prix
  --
  +obtenirSousTotal()
}

class ModeLivraison {
  +int id
  +string nom
  +decimal prix
  +int jours_estimes
  +boolean actif
  +text description
}

class PointRelais {
  +int id
  +string nom
  +string adresse
  +string ville
  +string code_postal
  +string telephone
  +json horaires_ouverture
  +decimal latitude
  +decimal longitude
  +boolean actif
  --
  +rechercherParCodePostal()
}

class AdresseLivraison {
  +int id
  +int utilisateur_id
  +string nom_complet
  +string telephone
  +string adresse
  +string ville
  +string code_postal
  +string pays
  +boolean par_defaut
}

class Coupon {
  +int id
  +string code
  +string type
  +decimal valeur
  +decimal montant_minimum
  +boolean livraison_gratuite
  +date date_debut
  +date date_fin
  +int utilisations_max
  +int compteur_utilisation
  +boolean actif
  --
  +valider()
  +appliquer()
}

class Avis {
  +int id
  +int produit_id
  +int utilisateur_id
  +int commande_id
  +int note
  +text commentaire
  +datetime date_creation
  --
  +estAchatVerifie()
}

class MouvementStock {
  +int id
  +int produit_id
  +int quantite
  +string type_mouvement
  +int commande_id
  +text notes
  +datetime date_creation
  --
  +verifierStockFaible()
}

' Relations principales
Utilisateur "1" --> "*" Panier : possède
Utilisateur "1" --> "*" Commande : passe
Utilisateur "1" --> "*" Avis : écrit
Utilisateur "1" --> "*" AdresseLivraison : a

Categorie "1" --> "*" Produit : contient

Panier "1" --> "*" ArticlePanier : contient
ArticlePanier "*" --> "1" Produit : référence

Commande "1" --> "*" ArticleCommande : contient
Commande "*" --> "1" ModeLivraison : utilise
Commande "*" --> "0..1" PointRelais : livre_à
Commande "*" --> "0..1" Coupon : applique
ArticleCommande "*" --> "1" Produit : référence

Produit "1" --> "*" Avis : a
Produit "1" --> "*" MouvementStock : suit

Avis "*" --> "1" Utilisateur : écrit_par
Avis "*" --> "1" Commande : vérifié_par

@enduml
